2008-06-28  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpaction.c (gimp_action_set_proxy): simplify the
	logic of setting "color" or "viewable" previews on menuitems.

2008-06-27  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimppaintoptions-gui.c (gimp_paint_options_gui): swap
	the angles of the dynamics matrix' labels in RTL and LTR mode so
	the beginning of the words are aligned and on bottom.

2008-06-26  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpscalebutton.c (gimp_scale_button_init): hide the
	popup's plus and minus buttons, they are completely pointless.

2008-06-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsettingsbox.c: make sure the file dialog goes
	away when the settings box' toplevel is hidden. Set the
	alternative button order on the file dialog.

2008-06-25  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpmarshal.list: add marshaller BOOLEAN__STRING for
	the change below.

	* app/widgets/gimpsettingsbox.[ch]: add the import/export dialogs
	here. Add a bunch of parameters to new() to be used by the
	dialogs, they are not properties yet. Changed import() and
	export() signals to pass the selected filename and return a
	boolean indicating success.

	* app/tools/gimpimagemaptool-settings.c: remove the dialog code
	here and connect the import/export functions directly to above
	GimpSettingsBox signals.

	* app/tools/gimpimagemaptool.[ch]: remove file dialog member.

2008-06-25  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcurvestool.c (gimp_curves_tool_settings_import):
	parse the first line of the file manually and detect whether we
	are importing an old curves file or a GimpConfig one.

2008-06-25  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimpcurvesconfig.c (gimp_curves_config_load_cruft):
	set any parsed negative value as -1 in the curves object because
	that's the only negative value allowed.

2008-06-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsettingseditor.c